Update irrPaint3D blog

--- a/_posts/2021-05-04-irr-paint-3d.md
+++ b/_posts/2021-05-04-irr-paint-3d.md
@@ -22,10 +22,9 @@ back in 2013, my thesis would shine among best thesises in my uni!
 Long story short, I have failed with that. And now, after spending just few days on this, I am happy to say I have achieved
 something with yet another glorious pet project revival:
 
-<img data-src="/images/irr-paint-3d/reworked_solution_screenshot.png" alt="Revised 3D model painting">
+<img data-src="/images/irr-paint-3d/final_version_screenshot.png" alt="Revised 3D model painting">
 
-This is not a 100% complete tool, but the cornerstone of figuring out the texture coordinates of a point in 3D space on a model
-is finally gone.
+And it actually allows to paint the model in 3D, displaying the results in real-time!
 
 A bit of history on how I got there and maths behind the solution under the cut.
 
@@ -131,4 +130,4 @@ irr::core::vector2df t1 = C.TCoords - A.TCoords;
 irr::core::vector2df uvCoords = A.TCoords + t1 * u + t2 * v;
 ```
 
-The rest is just rendering and drawing on a texture. The latest version of the code (which still does not _draw on a texture_) is [on GitHub](https://github.com/shybovycha/irrPaint3D).
+The rest is just rendering and drawing on a texture. The full version of the project is available [on GitHub](https://github.com/shybovycha/irrPaint3D).
