--- a/_posts/2021-05-04-irr-paint-3d.md
+++ b/_posts/2021-05-04-irr-paint-3d.md
@@ -4,6 +4,8 @@ title: 'irrPaint3d'
 date: 2021-05-04T13:49:00+07:00
 ---
 
+<div class="content-read-marker" data-id="{{page.title | slugify}}" data-fraction="0" data-page="{{page.title | escape}}"></div>
+
 Recently I was reviving some of my old projects. And to my surprise, there were some people actually interested in those!
 That was a good enough reason for me to revise the old pet projects of mine and exercise my skills (mostly in C++ though).
 
@@ -30,6 +32,8 @@ A bit of history on how I got there and maths behind the solution under the cut.
 
 <!--more-->
 
+<div class="content-read-marker" data-id="{{page.title | slugify}}" data-fraction="25" data-page="{{page.title | escape}}"></div>
+
 ## A brief history
 
 Back in the day I have put too little thought into the project so I ended up trying to implement LSCM algorithm to
@@ -51,6 +55,8 @@ I did try to understand the concept of barycentric coordinates, but that is some
 apparently:
 
 <img data-src="/images/irr-paint-3d/barycentric_coordinates.webp" alt="My previous understanding of barycentric coordinates">
+
+<div class="content-read-marker" data-id="{{page.title | slugify}}" data-fraction="50" data-page="{{page.title | escape}}"></div>
 
 ## The maths behind
 
@@ -85,6 +91,8 @@ where
 
 Simply using the substitution, we can first express `u` as a function of `v` and then calculate `v` to then find `u`.
 The only bit here is that the multiplier of `v` must not be zero.
+
+<div class="content-read-marker" data-id="{{page.title | slugify}}" data-fraction="75" data-page="{{page.title | escape}}"></div>
 
 In C++ this looks like this (I am using Irrlicht for this application, so bare with `irr::` namespaces):
 
@@ -131,3 +139,5 @@ irr::core::vector2df uvCoords = A.TCoords + t1 * u + t2 * v;
 ```
 
 The rest is just rendering and drawing on a texture. The full version of the project is available [on GitHub](https://github.com/shybovycha/irrPaint3D).
+
+<div class="content-read-marker" data-id="{{page.title | slugify}}" data-fraction="100" data-page="{{page.title | escape}}"></div>
