--- a/_posts/2021-05-04-irr-paint-3d.md
+++ b/_posts/2021-05-04-irr-paint-3d.md
@@ -14,7 +14,7 @@ This is a no unique feature nowadays, but back in 2013, to my knowledge, the onl
 unwrap them to UV maps and then paint the textures in graphics editor (such as Gimp or Paint.NET) or to use a proprietary
 software, 3D Coat.
 
-<img data-src="/images/irr-paint-3d/blender_unwrapping.webp" alt="Unwrapping 3D model texture in Blender in 2013">
+<img src="/images/irr-paint-3d/blender_unwrapping.webp" loading="lazy" alt="Unwrapping 3D model texture in Blender in 2013">
 
 And a mere idea of implementing such tool myself was quite exciting. Darn, if I managed to implement it
 back in 2013, my thesis would shine among best thesises in my uni!
@@ -22,7 +22,7 @@ back in 2013, my thesis would shine among best thesises in my uni!
 Long story short, I have failed with that. And now, after spending just few days on this, I am happy to say I have achieved
 something with yet another glorious pet project revival:
 
-<img data-src="/images/irr-paint-3d/final_version_screenshot.webp" alt="Revised 3D model painting">
+<img src="/images/irr-paint-3d/final_version_screenshot.webp" loading="lazy" alt="Revised 3D model painting">
 
 And it actually allows to paint the model in 3D, displaying the results in real-time!
 
@@ -43,16 +43,16 @@ on 2D plane at point `(0, 0)` and figuring out the 2D coordinates of the other t
 edges in 3D, using two circles, with centres at the pinned point (`(0, 0)`) and radiuses equal to triangle edges' lengths.
 The circles would overlap in two points, and both are candidates for the other two triangle' verices mapping:
 
-<img data-src="/images/irr-paint-3d/mapping_near.webp" alt="The idea behind my unwrapping algorithm">
+<img src="/images/irr-paint-3d/mapping_near.webp" loading="lazy" alt="The idea behind my unwrapping algorithm">
 
 The algorithm... worked... in some cases:
 
-<img data-src="/images/irr-paint-3d/cube_unwrapped.webp" alt="Sample algorithm result, unwrapped cube">
+<img src="/images/irr-paint-3d/cube_unwrapped.webp" loading="lazy" alt="Sample algorithm result, unwrapped cube">
 
 I did try to understand the concept of barycentric coordinates, but that is something completely different to what I imagined,
 apparently:
 
-<img data-src="/images/irr-paint-3d/barycentric_coordinates.webp" alt="My previous understanding of barycentric coordinates">
+<img src="/images/irr-paint-3d/barycentric_coordinates.webp" loading="lazy" alt="My previous understanding of barycentric coordinates">
 
 <div class="content-read-marker" data-fraction="50"></div>
 
@@ -62,7 +62,7 @@ With my new approach, I took an idea from the enormously cool introduction to co
 by [One Lone Coder](https://www.youtube.com/watch?v=ih20l3pJoeU). The idea itself is rather trivial: any vector could be represented
 as a sum of two other (not necessarily orthogonal) vectors (plus a condition that the angle between the two should not be 180 degrees).
 
-<img data-src="/images/irr-paint-3d/vector_as_a_sum.webp" alt="Vector as a sum of other vectors">
+<img src="/images/irr-paint-3d/vector_as_a_sum.webp" loading="lazy" alt="Vector as a sum of other vectors">
 
 In the example above, vector `p` could be represented as a sum of vectors `a` and `b`, each multiplied by certain coefficients:
 `p = u*a + v*b`.
